Fixed overflow on phones with a change to body's min-height

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -84,3 +84,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@supports (min-height: 100dvh) {
+  body {
+      min-height: 100dvh;
+  }
+}
